--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,7 +10,17 @@
         <!--Adding a font family and android:fontFamily attributes to the theme -->
         <item name="fontFamily">@font/lobster_two</item>
         <item name="android:fontFamily">@font/lobster_two</item>
+    </style>
 
+    <!-- Define a new title style -->
+    <style name="TextAppearance.Title" parent="TextAppearance.MaterialComponents.Headline6">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">#555555</item>
+    </style>
+
+    <!-- Define a new subtitle style -->
+    <style name="TextAppearance.Subtitle" parent="TextAppearance.Title" >
+        <item name="android:textSize">18sp</item>
     </style>
 
 </resources>
